fixed safari bugs and logo animation on mobile

--- a/wordpress/wp-content/themes/Nkantelberg/styles/styles.scss
+++ b/wordpress/wp-content/themes/Nkantelberg/styles/styles.scss
@@ -165,6 +165,11 @@ div.wrapper{
   svg{
     height: auto;
   }
+  a{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 }
 @media(min-width: 768px){
   .home{
@@ -508,5 +513,19 @@ div.wrapper{
     display: inline-block;
     padding: 0px;
     margin: 0px;
+  }
+}
+@media screen and (max-width: 767px) {
+  _::-webkit-full-page-media, _:future, :root .safari_only {
+    bottom: 104px !important;
+  }
+  _::-webkit-full-page-media, _:future, :root .main-wrapper .inner-section .about-wrapper .about-inner{
+    margin-bottom: 174px !important;
+  }
+  _::-webkit-full-page-media, _:future, :root .main-wrapper .inner-section .previous-work-wrapper .homepage-content-inner{
+    margin-bottom: 174px !important;
+  }
+  _::-webkit-full-page-media, _:future, :root .main-wrapper .inner-section .homepage-content-wrapper .homepage-content-inner{
+    margin-bottom: 174px !important;
   }
 }
